--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/compiler": "~9.0.0",
     "@angular/core": "~9.0.0",
     "@angular/forms": "~9.0.0",
+    "@angular/localize": "^9.0.4",
     "@angular/material": "^9.1.0",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "rxjs": "~6.5.4",
     "subsink": "^1.0.1",
     "time-ago-pipe": "^1.3.2",
