--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "chart.js": "^2.9.3",
     "rxjs": "~6.5.4",
     "subsink": "^1.0.1",
     "time-ago-pipe": "^1.3.2",
