--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "angular2-csv": "^0.2.9",
     "chart.js": "^2.9.3",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.24.0",
     "rxjs": "~6.5.4",
-    "subsink": "^1.0.1",
+    "subsink": "^1.0.2",
     "time-ago-pipe": "^1.3.2",
-    "tslib": "^1.10.0",
+    "tslib": "^1.14.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
